@@ -486,13 +486,6 @@ Es ist nicht empfehlenswert, diese Option zu aktivieren, weil
 
 <a name="admin_image_comment_filmstrip_toggle_end"></a>
 <hr />
-<a name="admin_image_comment_display_film_strip_filename"></a><h3>Dateinamen unter Filmstreifen-Thumbnails anzeigen<a href="#admin_image_comment_display_film_strip_filename" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
-<p>Schaltet die Anzeige des Dateinamens unterhalb des Filmstreifens an/aus.</p>
-<p>Es wird empfohlen, diese Option deaktiviert zu lassen, besonders wenn keine direkte Kontrolle über den Dateinamen vorhanden ist, weil Endbenutzer (nicht der Admin) ebenfalls das recht besitzen, Dateien hochzuladen. Besser ist es stattdessen, den tatsächlichen Text-Inhalt des Datenbankeintrags (Titel und Beschriftung) anzuzeigen. Wenn Dateinamen vorhanden sind, die nicht umgebrochen werden können wird die Anzeige des Dateinamens breiter sein als das Thumbnail, so dass die Tabellenzelle, die die Thumbnail und Beschriftung umgibt breiter wird und dadurch ein verzerrtes Aussehen der gesamten Tabelle erreicht wird und das Filmstreifen-feature dadurch unbenutzbar wird.</p>
-<p class="navlocator" style="text-align:right;color:#0E72A4;">Einstellungen &rarr; Ansicht Bild &rarr; Dateinamen unter Filmstreifen-Thumbnails anzeigen</p>
-
-<a name="admin_image_comment_display_film_strip_filename_end"></a>
-<hr />
 <a name="admin_image_comment_filmstrip_number"></a><h3>Anzahl Elemente in Film-Streifen<a href="#admin_image_comment_filmstrip_number" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 <p>Bestimmt die Anzahl der Thumbnails innerhalb des Filmstreifens. Diese Einstellung ist stark abhängig von der gewählten Thumbnailgröße und der Auflösung der Besucher. Um unangenehme Effekte für die Besucher mit kleineren Bildschirmauflösungen zu vermeiden sollte der Wert auf 3 bis 7 beschränkt werden.</p>
 <p>Es ist empfehlenswert, eine ungerade Zahl zu verwenden, so dass der Thumbnail, der die aktuelle Datei repräsentiert in der Mitte des Filmstreifens angezeigt wird. Standard (und auch die empfohlene Einstellung) ist <tt class="code">5</tt>.</p>
