@@ -508,13 +508,6 @@ It is <strong>not</strong> recommended to enable this option, because
 
 <a name="admin_image_comment_filmstrip_toggle_end"></a>
 <hr />
-<a name="admin_image_comment_display_film_strip_filename"></a><h3>Display file name under film strip thumbnail<a href="#admin_image_comment_display_film_strip_filename" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
-<p>Toggles the display of the file name below each thumbnail in the film strip.</p>
-<p>It's recommended to leave this option disabled, especially if you have no direct control over the file names (because you allow uploads by users). If you have long file names that can not be wrapped, the file name displayed may be wider than the thumbnail, so the table cell that wraps the thumbnail and the file name may get much wider than expected, resulting in a distorted view of the table and subsequently make the filmstrip feature unusable.</p>
-<p class="navlocator" style="text-align:right;color:#0E72A4;">Configuration &rarr; Image view &rarr; Display file name under film strip thumbnail</p>
-
-<a name="admin_image_comment_display_film_strip_filename_end"></a>
-<hr />
 <a name="admin_image_comment_filmstrip_number"></a><h3>Number of items in film strip<a href="#admin_image_comment_filmstrip_number" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 <p>Sets the number of thumbnails to display in film strip. The number you can set here is dependent on your thumbnail size and monitor size. If you do not want to inconvenience users with smaller monitors set this value between 3-7.</p>
 <p>It's recommended to use an odd number, so the thumbnail that represents the file actually viewed is being displayed in the center of the film strip. Default (and recommended) setting is <tt class="code">5</tt>.</p>
